--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "beautiful-react-hooks": "^5.0.1",
     "react": "^18.2.0",
+    "react-currency-flags": "^0.1.2",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-payment-icons": "^1.2.6",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^6.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
